# finops-crawler

./: CONTRIBUTING.md  LICENSE  README.md  example.py  pre_push_check.py  pyproject.toml
.github/workflows/: python-publish.yml
src/common/: __init__.py  credentials_provider.py
src/finops_crawler/: base.py
src/finops_crawler/aws/: README.md  __init__.py  api.py  example.py
src/finops_crawler/azure/: README.md  __init__.py  api.py  example.py
src/finops_crawler/credentials_provider/: __init__.py  credentials_config.yml
src/finops_crawler/openai/: README.md  __init__.py  api.py  example.py
